segmented api caller , started to test (ConfigurationProperties, log4j, and more)